src/objects/Opportunity_Screening__c.object
<CustomObject>
    <fields>
        <fullName>Gate1_Fit_Resources_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Fit_Resources</defaultValue>
        <description>R4 - This field refers to Gate1_Fit_Resources_Q</description>
        <label>6. Resources</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Safe_Island_A__c</fullName>
        <description>R4 - This field refers to Gate1_Fit_Safe_Island_A</description>
        <label>7. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes:Safe Island Classification in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No:Safe Island Classification not in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA:New Customer or Similar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Safe_Island_Classification_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Fit_Safe_Island_Classification</defaultValue>
        <description>R4 - This field refers to Gate1_Fit_Safe_Island_Classification_Q</description>
        <label>8. Safe Island Classification</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Safe_Island_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Fit_Safe_Island</defaultValue>
        <description>R4 - This field refers to Gate1_Fit_Safe Island_Q.</description>
        <label>7. Safe Island</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Strategy1_A__c</fullName>
        <description>R4-Gate1_Fit1_Strategy1_A</description>
        <label>4. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Strategy1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Fit_Strategy1</defaultValue>
        <description>R4 - Gate1_Fit_Strategy1_Q</description>
        <label>4. Strategy</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Strategy2_A__c</fullName>
        <description>R4 - This field refers to Gate1_Fit_Strategy2_A</description>
        <label>5. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Strategy2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Fit_Strategy2</defaultValue>
        <description>R4 - This field refers to Gate1_Fit_Strategy2_Q</description>
        <label>5. Strategy</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Competition1_A__c</fullName>
        <description>R4 - This field refers to Gate1_Get_Competition1_A</description>
        <label>11. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnKnown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Competition1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Get_Competition1</defaultValue>
        <description>R4 - This field refers to Gate1_Get_Competition1_Q</description>
        <label>11. Competition</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Competition2_A__c</fullName>
        <description>R4 - Gate1_Get_Competition2_A</description>
        <label>12. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Competition2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Get_Competition2</defaultValue>
        <description>R4 - This field refers to Gate1_Get_Competition2_Q</description>
        <label>12. Competition</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Customer_Relation1_A__c</fullName>
        <description>R4-Gate1_Get_Customer_Relation1_A</description>
        <label>9. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>No Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Customer_Relation1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Get_Customer_Relation1</defaultValue>
        <description>R4-Gate1_Get_Customer_Relation1_Q</description>
        <label>9. Customer Relation</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Customer_Relation2_A__c</fullName>
        <description>R4-Gate1_Get_Customer_Relation2_A</description>
        <label>10. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Get_Customer_Relation2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Get_Customer_Relation2</defaultValue>
        <description>R4 - This field refers to Gate1_Get_Customer_Relation2_Q</description>
        <label>10. Customer Relation</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Will_Business_value_A__c</fullName>
        <description>R4 - This field refers to Gate1_Will3_Business_value_and_bank_A1.</description>
        <label>3. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Will_Business_value_and_bank_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Will_Business_value_and_bank</defaultValue>
        <description>R4- This field refers to Business value and bankability.</description>
        <label>3. Business Value</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Will_EndUser_A__c</fullName>
        <description>R4-Gate1_Will1_EndUser_A</description>
        <label>1. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Will_EndUser_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Will_End_User</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 1-Will - Question</description>
        <label>1. End User</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate1_Will_Project_Development_A__c</fullName>
        <description>R4- This field refers to Gate1_Will_Project_Development_A.</description>
        <label>2. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnKnown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate1_Will_Project_Development_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate1_Will_Project_Development</defaultValue>
        <description>R4 - This field refers to Gate1_Will_Project_Development_Q.</description>
        <label>2. Project Development</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_FIT_Safe_Island_A__c</fullName>
        <description>R4 - This field refers to Gate2_FIT_Safe_Island_A</description>
        <label>31. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes:Safe Island Classification in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No:Safe Island Classification not in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA:New Customer or Similar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Commercial1_A__c</fullName>
        <description>R4-Gate2_Fit_Commercial1_A</description>
        <label>22. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Commercial1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Commercial1</defaultValue>
        <description>R4-Gate2_Fit_Commercial1_Q</description>
        <label>22. Commercial</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Commercial2_A__c</fullName>
        <description>R4-Gate2_Fit_Commercial2_A</description>
        <label>23. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Commercial2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Commercial2</defaultValue>
        <description>R4-Gate2_Fit_Commercial2_Q</description>
        <label>23. Commercial</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Commercial3_A__c</fullName>
        <description>R4-Gate2_Fit_Commercial3_A</description>
        <label>24. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Commercial3_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Commercial3</defaultValue>
        <description>R4-Gate2_Fit_Commercial3_Q</description>
        <label>24. Commercial</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Resources1_A__c</fullName>
        <label>26. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Resources1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Resources1</defaultValue>
        <description>R4 - This field refers to Gate2_Fit_Resources1_Q</description>
        <label>26. Resources</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Resources2_A__c</fullName>
        <label>27. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Resources2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Resources2</defaultValue>
        <description>R4 - This field refers to Gate2_Fit_Resources2_Q</description>
        <label>27. Resources</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Risk1_A__c</fullName>
        <label>33. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Threat level4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threat level3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threat level2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threat level1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Risk1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Risk1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Fit- Risk1_Question</description>
        <label>33. Risk</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Risk2_A__c</fullName>
        <label>34. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very high exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No exposure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Risk2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Risk2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Fit- Risk2_Question</description>
        <label>34. Risk</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Risk3_A__c</fullName>
        <label>35. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Stricter than ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less strict than ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In line with ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Risk3_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Risk3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Fit- Risk1_Question</description>
        <label>35. Risk</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Safe_Island_Classification_A__c</fullName>
        <description>R4 - This field refers to Gate2_Fit_Safe_Island_Classification_A</description>
        <label>32. Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Safe_Island_Classification_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Safe_Island_Classification</defaultValue>
        <description>R4 - This field refers to Gate2_Fit_Safe_Island_Classification_Q</description>
        <label>32. Safe Island Classification</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Safe_Island_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Safe_Island</defaultValue>
        <description>R4 - This field refers to Gate2_Fit_Safe Island_Q.</description>
        <label>31. Safe Island</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Strategy1_A__c</fullName>
        <description>R4-Gate2_Fit_Strategy1_A</description>
        <label>20. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Fit_Strategy1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Fit_Strategy1</defaultValue>
        <description>R4 -Gate2_Fit_Strategy1_Q</description>
        <label>20. Strategy</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Get1_Customer_Relation_Q1__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Get1_Customer_Relation</defaultValue>
        <description>R4 - This field refers to Gate2_Get1_Customer_Relation_Q1.</description>
        <label>Customer Relation</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competition1_A__c</fullName>
        <label>38. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competition1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Get_Competition1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Get-Competition1_Question</description>
        <label>38. Competition</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competitive_edge1_A__c</fullName>
        <label>42. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competitive_edge1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Get_Competitive_edge1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Get-Competitive_edge1_Question</description>
        <label>42. Competitive edge</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competitive_edge2_A__c</fullName>
        <label>43. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competitive_edge2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Get_Competitive_edge2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Get-Competitive_edge2_Question</description>
        <label>43. Competitive edge</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competitive_edge3_A__c</fullName>
        <label>44. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Competitive_edge3_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Get_Competitive_edge3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2-Get-Competitive_edge3_Question</description>
        <label>44. Competitive edge</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Get_Customer_relation1_A__c</fullName>
        <label>36. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Business_value_and_bank1_A__c</fullName>
        <description>R4 - This field refers to Gate2_Will_Business_value_and_bank1_A</description>
        <label>17. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Business_value_and_bank1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Will_Business_value_and_bank1</defaultValue>
        <description>R4- This field refers to Business value and bankability for Gate2-Will-Business value and bankability1-Q</description>
        <label>17. Business Value</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Business_value_and_bank2_A__c</fullName>
        <description>R4- This field refers to Business value and bankability for Gate2-Will-Business value and bankability2-A</description>
        <label>18. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Business_value_and_bank2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Will_Business_value_and_bank2</defaultValue>
        <description>R4- This field refers to Business value and bankability for Gate2-Will-Business value and bankability2-Q</description>
        <label>18. Business Value</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Business_value_and_bank3_A__c</fullName>
        <description>R4- This field refers to Business value and bankability for Gate2-Will-Business value and bankability3-A</description>
        <label>19. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_EndUser1_A__c</fullName>
        <description>R4-Gate2_Will_EndUser1_A</description>
        <label>13. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_EndUser1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Will_End_User1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2 - Will- End user1-Question</description>
        <label>13. End User</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_EndUser2_A__c</fullName>
        <description>R4-Gate2_Will_EndUser2_A</description>
        <label>14. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_EndUser2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Will_End_User2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Gate 2 - Will- End user2-Question</description>
        <label>14. End User</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>